Fully functioning students enrolment system.